--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "nodemon": "^2.0.12",
     "peer": "^0.5.3",
     "peerjs": "^1.3.2",
     "socket.io": "^2.4.1",
